--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -2736,6 +2736,9 @@
     "images": [
       {
         "url": "/projects/Zia_Ul_Uloom_University/1.webp"
+      },
+      {
+        "url": "/projects/Zia_Ul_Uloom_University/2.webp"
       }
     ]
   },
