--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -147,6 +147,13 @@
         "collage": true
       },
       {
+        "url": "/projects/Pizzoburg_Restaurant/13.webp",
+        "collage": true
+      },
+      {
+        "url": "/projects/Pizzoburg_Restaurant/11.webp"
+      },
+      {
         "url": "/projects/Pizzoburg_Restaurant/4.webp"
       },
       {
@@ -154,10 +161,19 @@
         "collage": true
       },
       {
+        "url": "/projects/Pizzoburg_Restaurant/14.webp",
+        "collage": true
+      },
+      {
         "url": "/projects/Pizzoburg_Restaurant/6.webp"
       },
       {
-        "url": "/projects/Pizzoburg_Restaurant/7.webp"
+        "url": "/projects/Pizzoburg_Restaurant/7.webp",
+        "collage": true
+      },
+      {
+        "url": "/projects/Pizzoburg_Restaurant/12.webp",
+        "collage": true
       },
       {
         "url": "/projects/Pizzoburg_Restaurant/8.webp"
@@ -169,6 +185,9 @@
       {
         "url": "/projects/Pizzoburg_Restaurant/10.webp",
         "collage": true
+      },
+      {
+        "url": "/projects/Pizzoburg_Restaurant/15.webp"
       }
     ]
   },
@@ -1071,6 +1090,9 @@
     "images": [
       {
         "url": "/projects/Marquee_Waseem/1.webp"
+      },
+      {
+        "url": "/projects/Marquee_Waseem/2.webp"
       }
     ]
   },
@@ -1118,7 +1140,8 @@
         "url": "/projects/Matrix_Parlour/5.webp"
       },
       {
-        "url": "/projects/Matrix_Parlour/6.webp"
+        "url": "/projects/Matrix_Parlour/6.webp",
+        "collage": true
       },
       {
         "url": "/projects/Matrix_Parlour/7.webp"
@@ -1148,10 +1171,16 @@
         "url": "/projects/Matrix_Parlour/15.webp"
       },
       {
-        "url": "/projects/Matrix_Parlour/16.webp"
+        "url": "/projects/Matrix_Parlour/16.webp",
+        "collage": true
       },
       {
-        "url": "/projects/Matrix_Parlour/17.webp"
+        "url": "/projects/Matrix_Parlour/17.webp",
+        "collage": true
+      },
+      {
+        "url": "/projects/Matrix_Parlour/18.webp",
+        "collage": true
       }
     ]
   },
@@ -1660,9 +1689,6 @@
       },
       {
         "url": "/projects/Dr_Iftikhar_1_Kanal/2.webp"
-      },
-      {
-        "url": "/projects/Dr_Iftikhar_1_Kanal/2.webp"
       }
     ]
   },
@@ -2036,12 +2062,6 @@
     "images": [
       {
         "url": "/projects/Nadeem_Bhatti/1.webp"
-      },
-      {
-        "url": "/projects/Nadeem_Bhatti/2.webp"
-      },
-      {
-        "url": "/projects/Nadeem_Bhatti/3.webp"
       }
     ]
   },
@@ -2313,10 +2333,10 @@
     "id": 73,
     "title": "6 MARLA (Plot 63,64)",
     "icon": "/icon4.webp",
-    "year": 2024,
+    "year": 2022,
     "category": "Residential",
-    "location": "DHA, Multan",
-    "description": "Experience luxury living in this stunning 6 Marla home in DHA Multan, offering modern design, spacious interiors, and premium amenities.",
+    "location": "Multan",
+    "description": "Abdul Rehman living in this stunning 6 Marla home in DHA Multan, offering modern design, spacious interiors, and premium amenities.",
     "preview": "/projects/Abdul_Rehman/1.webp",
     "images": [
       {
