--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1465,7 +1465,7 @@
     "category": "Residential",
     "location": "DHA, Multan",
     "description": "DSP Javaid Iqbal living in this stunning 1 Kanal home in DHA Multan, offering Classical design, spacious interiors, and premium amenities.",
-    "preview": "/projects/Dsp_Javed_1_Kanal/6.webp",
+    "preview": "/projects/Dsp_Javed_1_Kanal/15.webp",
     "images": [
       {
         "url": "/projects/Dsp_Javed_1_Kanal/1.webp"
@@ -1487,6 +1487,36 @@
       },
       {
         "url": "/projects/Dsp_Javed_1_Kanal/7.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/8.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/9.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/10.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/11.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/12.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/13.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/14.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/15.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/16.webp"
+      },
+      {
+        "url": "/projects/Dsp_Javed_1_Kanal/17.webp"
       }
     ]
   },
@@ -3053,7 +3083,7 @@
     ]
   },
   {
-    "id": 98,
+    "id": 99,
     "title": "Muhammad BUILDERS OFFICE INTERIOR",
     "icon": "/icon4.webp",
     "year": 2023,
