--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
@@ -29,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-swipeable": "^7.0.2",
+    "split-type": "^0.3.4",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1"
   },
