--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.8",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-slider": "^1.3.6",
+    "@studio-freight/lenis": "^1.0.42",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
