--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -3681,6 +3681,28 @@
         "collage": true
       }
     ]
+  },
+  {
+    "id": 109,
+    "title": "15 MARLA RESIDENTIAL",
+    "icon": "/icon4.webp",
+    "year": 2024,
+    "category": "Residential",
+    "subcategory":"Interior Projects",
+    "location": "Buch Villas, Multan",
+    "description": "Mr. Shahan living in this stunning 15 Marla home in Multan, offering modern design, spacious interiors, and premium amenities.",
+    "preview": "/projects/Shahan_15_Marla/1.webp",
+    "images": [
+      {
+        "url": "/projects/Shahan_15_Marla/1.webp"
+      },
+      {
+        "url": "/projects/Shahan_15_Marla/2.webp"
+      },
+      {
+        "url": "/projects/Shahan_15_Marla/3.webp"
+      }
+    ]
   }
   
 ]
