--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -3684,7 +3684,7 @@
   },
   {
     "id": 109,
-    "title": "15 MARLA RESIDENTIAL",
+    "title": "15 MARLA RESIDENTIAL (Plot C-569)",
     "icon": "/icon4.webp",
     "year": 2024,
     "category": "Residential",
